# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  pyci.yml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/tests/: test_calc.py  test_engine.py  test_even.py  test_gcd.py  test_prime.py  test_progression.py  test_welcome_user.py
