[tool.poetry]
authors = ["vy_filin"]
description = ""
name = "hexlet-code"
packages = [{include = "brain_games"}]
readme = "README.md"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
